fix dark mode icon, remove some global colors

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,7 +10,6 @@ $whitey: #ddd;
 
 body {
   font-family: 'Work Sans', sans-serif;
-  color: $dark-gray;
   a {
     text-decoration: none;
     cursor: pointer;
